// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TransactionType > should render delegate registration 1`] = `
<div>
  <div
    data-testid="TransactionType"
  >
    <div
      data-testid="DetailWrapper"
    >
      <div
        class="border-l-2 border-x-theme-primary-400 bg-theme-secondary-100 px-3 py-2 dark:bg-black sm:border-none sm:bg-transparent sm:p-0 dark:sm:bg-transparent"
        data-testid="DetailLabel"
      >
        <div
          class="no-ligatures text-md min-w-24 font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
          data-testid="DetailLabelText"
        >
          Transaction Type
        </div>
      </div>
      <div
        class="w-full break-words rounded-lg border-theme-secondary-300 p-3 dark:border-theme-secondary-800 sm:border sm:px-6 sm:py-5 [.condensed_&]:sm:py-4 mt-0 sm:mt-2"
      >
        <div
          class="flex w-full justify-between sm:justify-start"
        >
          <div
            class="no-ligatures text-md min-w-24 font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
            data-testid="DetailLabelText"
          >
            Category
          </div>
          <div
            class="css-1chzvd4"
            color="neutral"
          >
            Registration
          </div>
        </div>
        <div
          class="hidden h-8 w-full items-center sm:flex [.condensed_&]:h-3"
        >
          <div
            class="w-full [.condensed_&]:hidden"
          >
            <div
              class="border-theme-secondary-300 dark:border-theme-secondary-800 css-ppmbkz"
              type="horizontal"
            />
          </div>
        </div>
        <div
          class="flex w-full justify-between sm:justify-start"
        >
          <div
            class="no-ligatures text-md min-w-24 font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
            data-testid="DetailLabelText"
          >
            Delegate
          </div>
          <div
            class="font-semibold"
          >
            delegate
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionType > should render delegate resignation 1`] = `
<div>
  <div
    data-testid="TransactionType"
  >
    <div
      data-testid="DetailWrapper"
    >
      <div
        class="border-l-2 border-x-theme-primary-400 bg-theme-secondary-100 px-3 py-2 dark:bg-black sm:border-none sm:bg-transparent sm:p-0 dark:sm:bg-transparent"
        data-testid="DetailLabel"
      >
        <div
          class="no-ligatures text-md min-w-24 font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
          data-testid="DetailLabelText"
        >
          Transaction Type
        </div>
      </div>
      <div
        class="w-full break-words rounded-lg border-theme-secondary-300 p-3 dark:border-theme-secondary-800 sm:border sm:px-6 sm:py-5 [.condensed_&]:sm:py-4 mt-0 sm:mt-2"
      >
        <div
          class="flex w-full justify-between sm:justify-start"
        >
          <div
            class="no-ligatures text-md min-w-24 font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
            data-testid="DetailLabelText"
          >
            Category
          </div>
          <div
            class="css-1chzvd4"
            color="neutral"
          >
            Resignation
          </div>
        </div>
        <div
          class="hidden h-8 w-full items-center sm:flex [.condensed_&]:h-3"
        >
          <div
            class="w-full [.condensed_&]:hidden"
          >
            <div
              class="border-theme-secondary-300 dark:border-theme-secondary-800 css-ppmbkz"
              type="horizontal"
            />
          </div>
        </div>
        <div
          class="flex w-full justify-between sm:justify-start"
        >
          <div
            class="no-ligatures text-md min-w-24 font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
            data-testid="DetailLabelText"
          >
            Delegate
          </div>
          <div
            class="font-semibold"
          >
             
            delegate
             
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionType > should render in lg 1`] = `
<div>
  <div
    data-testid="TransactionType"
  >
    <div
      data-testid="DetailWrapper"
    >
      <div
        class="border-l-2 border-x-theme-primary-400 bg-theme-secondary-100 px-3 py-2 dark:bg-black sm:border-none sm:bg-transparent sm:p-0 dark:sm:bg-transparent"
        data-testid="DetailLabel"
      >
        <div
          class="no-ligatures text-md min-w-24 font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
          data-testid="DetailLabelText"
        >
          Transaction Type
        </div>
      </div>
      <div
        class="w-full break-words rounded-lg border-theme-secondary-300 p-3 dark:border-theme-secondary-800 sm:border sm:px-6 sm:py-5 [.condensed_&]:sm:py-4 mt-0 sm:mt-2"
      >
        <div
          class="flex w-full justify-between sm:justify-start"
        >
          <div
            class="no-ligatures text-md min-w-24 font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
            data-testid="DetailLabelText"
          >
            Category
          </div>
          <div
            class="css-1chzvd4"
            color="neutral"
          >
            Multipayment
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionType > should render in md 1`] = `
<div>
  <div
    data-testid="TransactionType"
  >
    <div
      data-testid="DetailWrapper"
    >
      <div
        class="border-l-2 border-x-theme-primary-400 bg-theme-secondary-100 px-3 py-2 dark:bg-black sm:border-none sm:bg-transparent sm:p-0 dark:sm:bg-transparent"
        data-testid="DetailLabel"
      >
        <div
          class="no-ligatures text-md min-w-24 font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
          data-testid="DetailLabelText"
        >
          Transaction Type
        </div>
      </div>
      <div
        class="w-full break-words rounded-lg border-theme-secondary-300 p-3 dark:border-theme-secondary-800 sm:border sm:px-6 sm:py-5 [.condensed_&]:sm:py-4 mt-0 sm:mt-2"
      >
        <div
          class="flex w-full justify-between sm:justify-start"
        >
          <div
            class="no-ligatures text-md min-w-24 font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
            data-testid="DetailLabelText"
          >
            Category
          </div>
          <div
            class="css-1chzvd4"
            color="neutral"
          >
            Multipayment
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionType > should render in sm 1`] = `
<div>
  <div
    data-testid="TransactionType"
  >
    <div
      data-testid="DetailWrapper"
    >
      <div
        class="border-l-2 border-x-theme-primary-400 bg-theme-secondary-100 px-3 py-2 dark:bg-black sm:border-none sm:bg-transparent sm:p-0 dark:sm:bg-transparent"
        data-testid="DetailLabel"
      >
        <div
          class="no-ligatures text-md min-w-24 font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
          data-testid="DetailLabelText"
        >
          Transaction Type
        </div>
      </div>
      <div
        class="w-full break-words rounded-lg border-theme-secondary-300 p-3 dark:border-theme-secondary-800 sm:border sm:px-6 sm:py-5 [.condensed_&]:sm:py-4 mt-0 sm:mt-2"
      >
        <div
          class="flex w-full justify-between sm:justify-start"
        >
          <div
            class="no-ligatures text-md min-w-24 font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
            data-testid="DetailLabelText"
          >
            Category
          </div>
          <div
            class="css-1chzvd4"
            color="neutral"
          >
            Multipayment
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionType > should render in xl 1`] = `
<div>
  <div
    data-testid="TransactionType"
  >
    <div
      data-testid="DetailWrapper"
    >
      <div
        class="border-l-2 border-x-theme-primary-400 bg-theme-secondary-100 px-3 py-2 dark:bg-black sm:border-none sm:bg-transparent sm:p-0 dark:sm:bg-transparent"
        data-testid="DetailLabel"
      >
        <div
          class="no-ligatures text-md min-w-24 font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
          data-testid="DetailLabelText"
        >
          Transaction Type
        </div>
      </div>
      <div
        class="w-full break-words rounded-lg border-theme-secondary-300 p-3 dark:border-theme-secondary-800 sm:border sm:px-6 sm:py-5 [.condensed_&]:sm:py-4 mt-0 sm:mt-2"
      >
        <div
          class="flex w-full justify-between sm:justify-start"
        >
          <div
            class="no-ligatures text-md min-w-24 font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
            data-testid="DetailLabelText"
          >
            Category
          </div>
          <div
            class="css-1chzvd4"
            color="neutral"
          >
            Multipayment
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionType > should render in xs 1`] = `
<div>
  <div
    data-testid="TransactionType"
  >
    <div
      data-testid="DetailWrapper"
    >
      <div
        class="border-l-2 border-x-theme-primary-400 bg-theme-secondary-100 px-3 py-2 dark:bg-black sm:border-none sm:bg-transparent sm:p-0 dark:sm:bg-transparent"
        data-testid="DetailLabel"
      >
        <div
          class="no-ligatures text-md min-w-24 font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
          data-testid="DetailLabelText"
        >
          Transaction Type
        </div>
      </div>
      <div
        class="w-full break-words rounded-lg border-theme-secondary-300 p-3 dark:border-theme-secondary-800 sm:border sm:px-6 sm:py-5 [.condensed_&]:sm:py-4 mt-0 sm:mt-2"
      >
        <div
          class="flex w-full justify-between sm:justify-start"
        >
          <div
            class="no-ligatures text-md min-w-24 font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
            data-testid="DetailLabelText"
          >
            Category
          </div>
          <div
            class="css-1chzvd4"
            color="neutral"
          >
            Multipayment
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionType > should render ipfs 1`] = `
<div>
  <div
    data-testid="TransactionType"
  >
    <div
      data-testid="DetailWrapper"
    >
      <div
        class="border-l-2 border-x-theme-primary-400 bg-theme-secondary-100 px-3 py-2 dark:bg-black sm:border-none sm:bg-transparent sm:p-0 dark:sm:bg-transparent"
        data-testid="DetailLabel"
      >
        <div
          class="no-ligatures text-md min-w-24 font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
          data-testid="DetailLabelText"
        >
          Transaction Type
        </div>
      </div>
      <div
        class="w-full break-words rounded-lg border-theme-secondary-300 p-3 dark:border-theme-secondary-800 sm:border sm:px-6 sm:py-5 [.condensed_&]:sm:py-4 mt-0 sm:mt-2"
      >
        <div
          class="flex w-full justify-between sm:justify-start"
        >
          <div
            class="no-ligatures text-md min-w-24 font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
            data-testid="DetailLabelText"
          >
            Category
          </div>
          <div
            class="css-1chzvd4"
            color="neutral"
          >
            Resignation
          </div>
        </div>
        <div
          data-testid="DetailIpfs"
        >
          <div
            class="hidden h-8 w-full items-center sm:flex [.condensed_&]:h-3"
          >
            <div
              class="w-full [.condensed_&]:hidden"
            >
              <div
                class="border-theme-secondary-300 dark:border-theme-secondary-800 css-ppmbkz"
                type="horizontal"
              />
            </div>
          </div>
          <div
            class="flex w-full justify-between sm:justify-start"
          >
            <div
              class="no-ligatures text-md min-w-24 font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
              data-testid="DetailLabelText"
            >
              Hash
            </div>
            <div
              class="flex w-full space-x-2"
            >
              <div
                class="flex w-full"
              >
                <span
                  class="no-ligatures min-w-0 overflow-hidden font-semibold"
                >
                  QmVqNrDfr2dxzQUo4VN3zhG4NV78uYFmRpgSktWDc2eeh2
                </span>
              </div>
              <button
                class="ring-focus relative focus:outline-none"
                data-ring-focus-margin="-m-1"
                data-testid="clipboard-icon__wrapper"
                type="button"
              >
                <div
                  class="text-theme-primary-400 dark:text-theme-secondary-700 dark:hover:text-theme-secondary-500 css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg
                    id="copy"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                      />
                      <path
                        d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                      />
                    </g>
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
